1030 - Details contrast errors fixed to WCAG AAA

--- a/arches_her/media/css/report_templates.css
+++ b/arches_her/media/css/report_templates.css
@@ -344,7 +344,7 @@ i.toggle:hover {
 }
 
 .aher-table .table td {
-    color: #777;
+    color: #595959;
     font-size: 13px;
     padding: 3px 8px;
 }
